# vector-database-benchmarks

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
02_ingest/: ingest_elasticsearch.py  ingest_pinecone.py
03_search/: elasticsearch_search.ipynb  pinecone_search.ipynb
experiments/: explore_embeddings.ipynb  generate_questions.ipynb
review/: elasticsearch.md  pinecone.md
