[project]
name = "database-reviews"
version = "0.1.0"
description = ""
authors = [
    {name = "Liza Katz",email = "lizka.k@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "elasticsearch (>=9.2.1,<10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false